Updated android packaging script Added JDK 10 to Docker container